task 10 user-profile model: 创建接口 APIs, DynamicProfileService不再实现集成测试. 现在通过接口实现端到端测试. 更新 updateDynamicProfile的逻辑